# leak-assert

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: analyzer.rs  assertions.rs  lib.rs  reporters.rs  sampler.rs
docker/: Dockerfile  docker-compose.example.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: cli.md  getting-started.md  go.md  node.md  python.md  sidecar.md  vitest.md
examples/: leak-assert.yaml
examples/browser/: index.html
examples/deno/: main.ts
examples/go/: example_test.go
examples/node/: example.test.ts
examples/python/: test_example.py
plugins/jest/: CHANGELOG.md  package.json  tsconfig.json
plugins/jest/src/: index.ts
plugins/pytest/: CHANGELOG.md  pyproject.toml
plugins/pytest/pytest_leak_assert/: __init__.py  plugin.py
plugins/vitest/: CHANGELOG.md  package.json
plugins/vitest/src/: index.ts
scripts/: demo.sh
sdks/go/: CHANGELOG.md  assertions.go  go.mod  heap_objects.go  leakassert.go  leakassert_test.go  middleware.go  reporters.go  sampler.go
sdks/go/exporters/: otel.go
sdks/go/ffi/: analyzer.go  analyzer.h  ffi_test.go
sdks/node/: CHANGELOG.md  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
sdks/node/src/: LeakTest.ts  assertions.ts  browser.ts  heap-snapshot.ts  index.ts  wasm-bridge.ts
sdks/node/src/__tests__/: LeakTest.test.ts  assertions.test.ts  heap-snapshot.test.ts
sdks/node/src/exporters/: otel.ts
sdks/node/src/middleware/: sidecar.ts
sdks/node/src/reporters/: junit.ts
sdks/node/src/samplers/: v8.ts
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/leak_assert/: __init__.py  assertions.py  leak_test.py  middleware.py  reporters.py  samplers.py
sdks/python/leak_assert/exporters/: __init__.py  otel.py
sdks/python/tests/: test_assertions.py  test_leak_test.py  test_sampler.py
spec/: envelope.schema.json
