[package]
name        = "leak-assert-wasm"
version     = "0.1.0"
edition     = "2021"
description = "WASM bindings for leak-assert-core (used by Node/Python SDKs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
leak-assert-core = { path = "../../core" }
wasm-bindgen     = "0.2"
serde_json       = "1"

[profile.release]
opt-level = "z"   # minimise .wasm size
lto       = true
