# Pure-Python build (default).
# For the native Rust extension, use: pip install maturin && maturin develop
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "leak-assert"
version     = "0.1.0"
description = "Memory leak regression testing — write assertions, not profiler reports"
license     = { text = "MIT" }
requires-python = ">=3.10"
dependencies    = []

[project.urls]
Repository = "https://github.com/leak-assert/leak-assert"

[project.optional-dependencies]
dev    = ["pytest>=7", "pytest-asyncio>=0.21", "objgraph"]
native = ["maturin>=1.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# ── maturin config (used when building the native extension) ──────────────────
[tool.maturin]
# Points maturin at the PyO3 crate
manifest-path = "../../bindings/python/Cargo.toml"
python-source = "."
features      = ["pyo3/extension-module"]
